cursive-bootstrap/tests/ui/E-TYP/E-TYP-1521.cursive
// RUN: compile-fail
// DIAG: E-TYP-1521
// SPEC: 8.15
// DESC: Invariant type parameter position mismatch

record Invariant<T> {
    setter: procedure(T) -> ()
    getter: procedure() -> T
}

procedure coerce(x: Invariant<i32>) -> Invariant<i64> {
    return x  //~ ERROR E-TYP-1521: invariant type mismatch
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
